# qgroundcontrol

./: qgroundcontrol.qrc
.github/workflows/: android.yml
custom-example/: qgroundcontrol.qrc
src/: CMakeLists.txt
src/FlightDisplay/: CMakeLists.txt  FlyViewMap.qml  FlyViewWidgetLayer.qml  VirtualGimbalJoystick.qml
src/Joystick/: Joystick.cc  Joystick.h
src/PositionManager/: PositionManager.cpp
src/QmlControls/: QGroundControlQmlGlobal.cc  QGroundControlQmlGlobal.h
src/Settings/: App.SettingsGroup.json  AppSettings.cc  AppSettings.h
src/Tutorial/: CMakeLists.txt  POI.cc  POI.h  POIManager.cc  POIManager.h
src/Vehicle/: RemoteIDManager.cc
